# Mantra-RWA-Compliance

./: .gitignore  README.md  package-lock.json
artifacts/: verifier.wasm
circuits/compliance-proofs/crates/circuits/src/: main.rs
circuits/compliance-proofs/crates/core/src/: lib.rs  math.rs  verifier.rs
circuits/compliance-proofs/crates/ingestion/src/: db.rs  embedder.rs  main.rs  parser.rs
circuits/compliance-proofs/crates/mantra-script/src/: mantra.rs
circuits/compliance-proofs/fixtures/: README.md  proof_output.json
contracts/: TECHNICAL_ARCHITECTURE.md
contracts/mantra-rwa-core/contracts/custom-marker/src/: tests.rs
contracts/mantra-rwa-core/contracts/cw20-marker/parameters/: addAgent.json  addToPartialFreeze.json  burn.json  burnFrom.json  createMarker.json  forceTransfer.json  freeze.json  getBalance.json  getCirculatingSupply.json  getDenomConfig.json  getFreezedAccounts.json  getFrozenBalance.json  getFrozenTokens.json  (+8 more)
contracts/verifier/: Cargo.toml
contracts/verifier/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/verifier/tests/: integration.rs
docs/: DEMO.md  HOW_TO_DEMO.md
docs/grant_assets/: LITEPAPER.md  PITCH_DECK.md
scripts/: build_contract.sh  run_demo_flow.sh  simulate_full_flow.sh
study/: README_summary.md  analysis_custom_marker.md  analysis_cw20_wrappers.md  analysis_factory.md  analysis_fund.md  analysis_interop.md  analysis_price_feed.md  analysis_treasury_bond.md  asset_lifecycle_notes.md  compliance_architecture.mermaid  full_ecosystem_flow.mermaid  mantra_contract_flow.mermaid  system_architecture_master.md
(+986 files in other folders)
