
[package]
name = "mantra-contract"
version = "0.1.0"
authors = ["Divyank Rai <VeriVault>"]
description = "SP1 Groth16 ZK proof verifier for MANTRA Chain RWA compliance"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
schemars = "0.8"
sp1-verifier = { version = "3.0.0", default-features = false }
hex = "0.4"

[dev-dependencies]
cw-multi-test = "0.20.0"
serde_json = "1.0"

